syntax = "proto3";

package spine.system.server;

import "spine/options.proto";
import "spine/time_options.proto";

option (type_url_prefix) = "type.spine.io";
option (internal_all) = true;

option java_package = "io.spine.system.server.command";
option java_outer_classname = "CatchUpCommandsProto";
option java_multiple_files = true;

import "spine/system/server/catch_up.proto";

// Starts the catch-up process.
//
message StartCatchUp {

    CatchUpId id = 1;

    // A request describing the catch-up properties.
    CatchUp.Request request = 2;
}

// Tells the ongoing catch-up process to read more events from the event log and send those to
// the respective target inboxes.
//
message RecallMoreHistoryEvents {

    CatchUpId id = 1;
}

// Tells to start finalizing the catch-up process.
//
message FinalizeCatchUp {

    CatchUpId id = 1;
}

// Tells to complete the catch-up process.
//
message CompleteCatchUp {

    CatchUpId id = 1;
}
